<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/public_client_head_bg"
    android:overScrollMode="never"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/public_toolbar" />

        <RelativeLayout
            android:id="@+id/rl_xing_ming"
            style="@style/public_MineItemRelativeLayout">


            <TextView
                style="@style/public_MineItemText"
                android:text="@string/xiaoxing_setting_xing_ming" />

            <TextView
                android:id="@+id/tv_xing_ming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_15"
                android:drawablePadding="@dimen/dp_10"
                android:drawableRight="@mipmap/icon_next"
                android:text=""
                android:textColor="@color/public_mine_item_text"
                android:textSize="@dimen/public_font_14sp" />


        </RelativeLayout>

        <include layout="@layout/public_line_horizontal" />

        <RelativeLayout
            android:id="@+id/rl_ni_cheng"

            style="@style/public_MineItemRelativeLayout">


            <TextView
                style="@style/public_MineItemText"
                android:text="@string/xiaoxing_setting_ni_cheng" />

            <TextView
                android:id="@+id/tv_ni_cheng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_15"
                android:drawablePadding="@dimen/dp_10"
                android:drawableRight="@mipmap/icon_next"
                android:text=""
                android:textColor="@color/public_mine_item_text"
                android:textSize="@dimen/public_font_14sp" />

        </RelativeLayout>

        <include layout="@layout/public_line_horizontal" />

        <RelativeLayout
            android:id="@+id/rl_xing_bie"
            style="@style/public_MineItemRelativeLayout">


            <TextView
                style="@style/public_MineItemText"
                android:text="@string/xiaoxing_setting_xing_bie" />


            <TextView
                android:id="@+id/tv_xing_bie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_15"
                android:drawablePadding="@dimen/dp_10"
                android:drawableRight="@mipmap/icon_next"
                android:text="保密"
                android:textColor="@color/public_mine_item_text"
                android:textSize="@dimen/public_font_14sp" />


        </RelativeLayout>

        <include layout="@layout/public_line_horizontal" />

        <RelativeLayout
            android:id="@+id/rl_sheng_ri"
            style="@style/public_MineItemRelativeLayout">


            <TextView
                style="@style/public_MineItemText"
                android:text="@string/xiaoxing_setting_sheng_ri" />


            <TextView
                android:id="@+id/tv_sheng_ri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_15"
                android:drawablePadding="@dimen/dp_10"
                android:drawableRight="@mipmap/icon_next"
                android:text=""
                android:textColor="@color/public_mine_item_text"
                android:textSize="@dimen/public_font_14sp" />


        </RelativeLayout>

        <include layout="@layout/public_line_horizontal" />

        <RelativeLayout
            android:id="@+id/rl_tou_xiang"

            style="@style/public_MineItemRelativeLayout"
            android:layout_height="@dimen/dp_80">


            <TextView
                style="@style/public_MineItemText"
                android:text="@string/xiaoxing_setting_tou_xiang" />

            <ImageView
                android:id="@+id/img_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_15"
                android:src="@mipmap/ic_launcher" />

        </RelativeLayout>

        <include layout="@layout/public_line_horizontal" />

        <RelativeLayout
            android:id="@+id/rl_shou_huo_di_zhi"
            style="@style/public_MineItemRelativeLayout"
            android:layout_marginTop="@dimen/dp_10">


            <TextView
                style="@style/public_MineItemText"
                android:text="@string/xiaoxing_setting_shou_huo_di_zhi" />

            <TextView
                android:id="@+id/tv_shou_huo_di_zhi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_15"
                android:drawablePadding="@dimen/dp_10"
                android:drawableRight="@mipmap/icon_next"
                android:text=""
                android:textColor="@color/public_mine_item_text"
                android:textSize="@dimen/public_font_14sp" />

        </RelativeLayout>

        <include layout="@layout/public_line_horizontal" />

        <RelativeLayout
            android:id="@+id/rl_an_quan_zhong_xin"
            style="@style/public_MineItemRelativeLayout"
            android:layout_marginTop="@dimen/dp_10">


            <TextView
                style="@style/public_MineItemText"
                android:text="@string/xiaoxing_setting_an_quan_zhong_xin" />

            <TextView
                android:id="@+id/tv_an_quan_zhong_xin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_15"
                android:drawablePadding="@dimen/dp_10"
                android:drawableRight="@mipmap/icon_next"
                android:text=""
                android:textColor="@color/public_mine_item_text"
                android:textSize="@dimen/public_font_14sp" />

        </RelativeLayout>

        <include layout="@layout/public_line_horizontal" />

        <RelativeLayout
            android:id="@+id/rl_shi_ming_ren_zheng"
            style="@style/public_MineItemRelativeLayout"
            android:layout_marginTop="@dimen/dp_10">


            <TextView
                style="@style/public_MineItemText"
                android:text="@string/xiaoxing_setting_shi_ming_ren_zheng" />

            <TextView
                android:id="@+id/tv_shi_ming_ren_zheng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_15"
                android:drawablePadding="@dimen/dp_10"
                android:drawableRight="@mipmap/icon_next"
                android:text=""
                android:textColor="@color/public_mine_item_text"
                android:textSize="@dimen/public_font_14sp" />

        </RelativeLayout>


        <Button
            android:id="@+id/btn_sign_out"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/public_btn_selector_corner_35dp"
            android:text="@string/xiaoxing_setting_tui"
            android:textColor="@color/public_white"
            android:textSize="@dimen/public_font_16sp" />

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>